--- a/estilo.css
+++ b/estilo.css
@@ -21,6 +21,43 @@ h3 {color: blue;
 font-family: Verdana;
 font-size: large}
 br.center{text-align: center;}
-div { color:whitesmoke;}
 
 
+div.nomeInst{
+  font-size: 50px;
+  text-align: center;
+  margin: 0 auto;
+  width: 50%;
+}
+
+div.menu{
+  margin-top: 5px;
+}
+
+div.voltarIni{
+  font-size: 25px;
+  text-align: center;
+  width: 33%;
+  float: left;
+}
+
+div.irCont{
+  font-size: 25px;
+  text-align: center;
+  width: 33%;
+  float: right;
+}
+
+div.irCurs{
+  font-size: 25px;
+  text-align: center;
+  width: 33%;
+  display: inline-block;
+  margin-left: 7px;
+}
+
+div.cont{
+  width: 70%;
+  text-align: center;
+  margin: 0 auto 0 auto;
+}
