--- a/estilo.css
+++ b/estilo.css
@@ -4,11 +4,16 @@ body{background-color:lightblue;}
 h1 {
   color: black;
   font-family: verdana;
-  font-size: 40;
+  font-size: 10;
+  text-align: center;
 }
 
  p {
     font-size: large;
+}
+
+ol {
+  font-size: large;
 }
 
 a{
@@ -22,6 +27,18 @@ font-size: 40px;
 text-align: center;
 }
 
+.page-header {
+  background-color: #0000CD;
+  margin-top: 0;
+  padding: 5px 5px 5px 10px;
+}
+
+.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+  color: #ffffff;
+  font-size: 24pt;
+  text-decoration: none;
+  text-align: center;
+}
 
 div.nomeInst{
   font-size: 50px;
@@ -62,4 +79,8 @@ div.cont{
   text-align: justify;
   margin: 50px auto 0 auto;
   font-family: Verdana, Tahoma, sans-serif;
+  border: solid rgba(13, 9, 53, 0.678) 1px;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box; 
+          box-sizing: border-box;
 }
